# mood-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  version-check.yml
examples/: analysis.py  guard.py  guard_ensemble.py  instruction_tuned.py  mahalanobis.py  mixture_guard_perplexity.py  perplexity.py  utils.py
mood_bench/: __init__.py  _output.py  _prompts.py  aggregator.py  core.py  data.py  metrics.py  prompts.py  tokenize.py
mood_bench/cli/: __init__.py  _common.py  analyze.py  guard.py  instruction_tuned.py  mahalanobis.py  perplexity.py
mood_bench/pipeline/: __init__.py  base.py  guard.py  instruction_tuned.py  mahalanobis.py  perplexity.py
mood_bench/prompts/: instruction_grading_icl.jinja  scoring_rubric_alignment.jinja
prompts/: constitution.txt  default_chat_template.jinja  instruction_grading_icl.jinja  instruction_grading_no_icl.jinja  scoring_rubric_alignment.jinja  scoring_rubric_uncertainty.jinja
tests/: conftest.py  run_tests.sh  test_aggregator.py  test_analysis.py  test_cli.py  test_core.py  test_guard.py  test_guard_perplexity.py  test_instruction_tuned.py  test_mahalanobis.py  test_perplexity.py  test_pipelines_stub.py  test_real_models.py
tests/e2e/: test_guard.py  test_instruction_tuned.py  test_mahalanobis.py  test_perplexity.py
