[project]
name = "mood-bench"
version = "1.0.0"
description = "Todo"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.0",
    "datasets>=4.0.0",
    "rich>=14.0.0",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.8.0",
    "transformers>=4.55.4",
    "peft>=0.13.0",
    "einops>=0.8.1",
    "wandb>=0.21.3",
    "torch>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mood_bench"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.uv]
default-groups = "all"

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "real_model: tests that load real HF weights; skipped unless --real-models is passed",
]
